<resources>
    <string name="app_name">OpenStream</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Lorem Ipsum</string>
    <string name="author">Lovely</string>
    <string name="test_fragment">De aici opresc muzica</string>

    <!-- Login/Register Activity Strings -->
    <string name="welcome_title">Welcome to OpenStream</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="register_redirect_button_text">Create a new account</string>
    <string name="register_button_text">Register</string>

    <!-- Main Activity Strings -->
    <string name="username_greet">Welcome, user!</string>

    <!-- Options Fragment Strings -->
    <string name="upload_file">Upload a song</string>
</resources>